--- a/win64/VNKey/VNKeyUpdate/VNKeyUpdate.rc
+++ b/win64/VNKey/VNKeyUpdate/VNKeyUpdate.rc
@@ -32,7 +32,7 @@ LANGUAGE LANG_ENGLISH, SUBLANG_ENGLISH_US
 
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
-IDI_OPENKEYUPDATE       ICON                    "VNKeyUpdate.ico"
+IDI_VNKEYUPDATE       ICON                    "VNKeyUpdate.ico"
 
 IDI_SMALL               ICON                    "small.ico"
 
@@ -42,7 +42,7 @@ IDI_SMALL               ICON                    "small.ico"
 // Menu
 //
 
-IDC_OPENKEYUPDATE MENU
+IDC_VNKEYUPDATE MENU
 BEGIN
     POPUP "&File"
     BEGIN
@@ -60,7 +60,7 @@ END
 // Accelerator
 //
 
-IDC_OPENKEYUPDATE ACCELERATORS
+IDC_VNKEYUPDATE ACCELERATORS
 BEGIN
     "?",            IDM_ABOUT,              ASCII,  ALT
     "/",            IDM_ABOUT,              ASCII,  ALT
@@ -198,7 +198,7 @@ END
 STRINGTABLE
 BEGIN
     IDS_APP_TITLE           "VNKeyUpdate"
-    IDC_OPENKEYUPDATE       "OPENKEYUPDATE"
+    IDC_VNKEYUPDATE       "VNKEYUPDATE"
 END
 
 #endif    // English (United States) resources
